# Lab-LLM-Engine-Controller

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/llm_engine_server/: __init__.py  __main__.py  app.py  controller.py  models.py  probes.py  settings.py  ui.py  wol.py
tests/: test_controller.py  test_wol.py
