[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-engine-server"
version = "0.2.0"
description = "Shared Wake-on-LAN and readiness control server for a single homelab LLM engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cesar Hernandez" }]
dependencies = [
  "fastapi>=0.117.0,<1.0.0",
  "uvicorn[standard]>=0.37.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
